todo-app/manifests/app/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-todo-svc
  labels:
    app: postgres
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
