todo-app/manifests/app/todo-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
  namespace: project
spec:
  selector:
    app: todo-frontend
  ports:
    - port: 1234         # This matches our Ingress rule
      targetPort: 3000
