todo-app/manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project
  annotations:
    kubernetes.io/ingress.class: "traefik"  # Use Traefik ingress controller for k3d
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-svc
                port:
                  number: 1234 # Routes web pages, css, and JS assets

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 80 # Routes database interaction data API calls
